--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "serverless-dotenv-plugin": "^6.0.0"
   },
   "devDependencies": {
     "serverless-offline": "^13.6.0"
