--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,10 @@ jobs:
 
       - name: Set environment variables
         run: |
-          echo "DB_HOST=$secrets.DB_HOST" >> .env
-          echo "DB_USER=$secrets.DB_USER" >> .env
-          echo "DB_PASSWORD=$ecrets.DB_PASSWORD" >> .env
-          echo "DB_NAME=$secrets.DB_NAME" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
 
       - name: Deploy with Serverless
         run: npx serverless deploy
