--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.614.0",
     "aws-sdk": "^2.1659.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
